<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/frame">

    <TextView
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:id="@+id/title_dialog_missing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over_missing"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/score_label_missing_piggy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_dialog_missing"
        android:layout_marginTop="20dp"
        android:text="@string/game_over_desccription_missing"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart_btn_missing"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_label_missing_piggy"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/restart_missing"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit_btn_missing"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restart_btn_missing"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/exit_missing"/>

</androidx.constraintlayout.widget.ConstraintLayout>