<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMissingBoard"
    android:background="@drawable/bg1">

    <ImageView
        android:id="@+id/title_piggy_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:src="@drawable/title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_piggy_board"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_piggy_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:text="@string/play_missing"
            android:textColor="@color/white"
            android:textSize="32sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_piggy_settings"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:text="@string/settings_missing"
            android:textColor="@color/white"
            android:textSize="32sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_piggy_exit"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:text="@string/exit_missing"
            android:textColor="@color/white"
            android:textSize="32sp"/>
    </LinearLayout>

</RelativeLayout>